--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+Localizado no coração da cidade a Banquinha de pipa Irmãos pipa traz para o mun   
 </body>
 </html>
