--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-Localizado no coração da cidade a Banquinha de pipa Irmãos pipa traz para o mun   
+</p>Localizado no coração da cidade a <strong>Banquinha de pipa dois Irmãos</strong> traz para o mercado oque há de melhor para a sua felicidade. Fundada em 2020, a Banquinha de pipa dois Irmãos já é destaque na cidade e conquista clientes a cada dia   
 </body>
 </html>
