--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <meta charset="UTF-8">   
+    <title>Banquinha de pipa dois Irmãos</title>
+    </head>
+
 <body>
-</p>Localizado no coração da cidade a <strong>Banquinha de pipa dois Irmãos</strong> traz para o mercado oque há de melhor para a sua felicidade. Fundada em 2020, a Banquinha de pipa dois Irmãos já é destaque na cidade e conquista clientes a cada dia   
-</body>
-</html>
+<h1>Sobre a banquinha de pipa dois Irmãos</h1>
+
+</p>Localizado no coração da cidade a <strong>Banquinha de pipa dois Irmãos</strong> traz para o mercado oque há de melhor para a sua felicidade. Fundada em 2020, a Banquinha de pipa dois Irmãos já é destaque na cidade e conquista clientes a cada dia</p>
+
+<p><<em>Nossa missã</p>
