--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     </head>
 
 <body>
-<h1>Sobre a banquinha de pipa dois Irmãos</h1>
+    <h1 style="text-align: center">banquinha de pipa dois Irmãos</h1>
 
-</p>Localizado no coração da cidade a <strong>Banquinha de pipa dois Irmãos</strong> traz para o mercado oque há de melhor para a sua felicidade. Fundada em 2020, a Banquinha de pipa dois Irmãos já é destaque na cidade e conquista clientes a cada dia</p>
+    </p style="text-align: center">Localizado no coração da cidade a <strong>Banquinha de pipa dois Irmãos</strong> traz para o mercado oque há de melhor para a sua felicidade. Fundada em 2020, a Banquinha de pipa dois Irmãos já é destaque na cidade e conquista clientes a cada dia.</p>
 
-<p><<em>Nossa missã</p>
+    <p style="font-size: 20px; text-align: center"><em>Nossa missão é: <strong>"Trazer felicidade aos nossos clientes"</strong>.</em></p>
+
+    <p style="text-align: center">Oferecemos felicidade aos nossos clientes e e trazemos a melhor experiência aos nossos consumidores.</p>
+</body>
+</html>
