--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">   
     <title>Banquinha de pipa dois Irmãos</title>
     </head>
+     <style>
+     </style>
+ </head>
 
-<body>
+ <body>
     <h1 style="text-align: center">banquinha de pipa dois Irmãos</h1>
 
     </p style="text-align: center">Localizado no coração da cidade a <strong>Banquinha de pipa dois Irmãos</strong> traz para o mercado oque há de melhor para a sua felicidade. Fundada em 2020, a Banquinha de pipa dois Irmãos já é destaque na cidade e conquista clientes a cada dia.</p>
